--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "i-am",
+  "name": "i-be",
   "version": "1.0.0",
   "description": "NPX profile cards for the masses.",
   "main": "index.js",
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "i-am": "./index.js"
+    "i-be": "./index.js"
   },
   "author": "Samuel Beard",
   "license": "MIT",
